# webtools

./: .editorconfig  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/: webtools.py
