[tool.poetry]
name = "revensky.webtools"
version = "1.0.0"
description = "Functionalities for easier web development."
authors = ["Eduardo Rezende <eduardorbr7@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/revensky/webtools"
repository = "https://github.com/revensky/webtools.git"
keywords = ["Web Tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
packages = [{ include = "webtools.py", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
fulldict = "^0.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
Sphinx = "^3.2.1"
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
